# ProdGuardian

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  prodguardian_tui.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: release.yml  test.yml
prodguardian/: __init__.py  cli.py
prodguardian/agents/: __init__.py  backend_agent.py  base_agent.py  frontend_agent.py  manager.py  secrets_agent.py
prodguardian/cache/: db.py
prodguardian/llm/: __init__.py  active_config.py  budget.py  codebase_scanner.py  context.py  fixer.py  llm_router.py  ollama.py  router.py
prodguardian/production/: __init__.py  audit_fixes.py  auditor.py  generator.py
prodguardian/production/templates/: Dockerfile.j2  docker-compose.j2  env-example.j2  error-handler.j2  github-ci.j2  rate-limiter.j2
prodguardian/scan/: preset_scanner.py  presets_data.py  progress.py
prodguardian/scanner/: ast_parser.py  rule_engine.py
prodguardian/scanner/rules/: __init__.py  base.py  cors_exposure.py  debug_endpoints.py  hardcoded_secrets.py  missing_env.py  prod_leakage.py  sql_injection.py  unsafe_eval.py
prodguardian/tui/: __init__.py  app.py  llm_store.py  logo.txt  logo_art.py  orchestrator.py  responsive.py  settings_store.py  styles.py
prodguardian/tui/screens/: llm_config.py  project_picker.py  result_view.py  scan_setup.py  settings.py
prodguardian/tui/widgets/: llm_panel.py  logo_banner.py  preset_editor.py  rule_editor.py  scan_mode_panel.py  scan_progress.py
prodguardian/utils/: clipboard.py  config.py  framework_detect.py  output.py
tests/: conftest.py  test_active_config.py  test_agents.py  test_audit_fixes.py  test_audit_progress.py  test_clipboard.py  test_codebase_scanner.py  test_llm.py  test_llm_api_errors.py  test_llm_router.py  test_llm_scan_context.py  test_logo_art.py  test_ollama.py  test_presets.py  test_presets_data.py  test_production.py  test_responsive.py  test_result_navigation.py  test_rules.py  test_scan_budget.py  test_scan_progress.py  test_scan_progress_panel.py  test_static_scan_integration.py  test_token_aware_chunks.py  test_tui_orchestrator.py
(+6 files in other folders)
