[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prodguardian"
version = "0.1.0"
description = "Production readiness auditor for vibe-coded apps"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["security", "devops", "docker", "ci-cd", "static-analysis", "vibe-coding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "rich>=13.0.0",
    "detect-secrets>=1.4.0",
    "litellm>=1.40.0",
    "tiktoken>=0.5.0",
    "jinja2>=3.1.0",
    "textual>=0.40.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/prodguardian"
Repository = "https://github.com/yourusername/prodguardian"
Issues = "https://github.com/yourusername/prodguardian/issues"
Documentation = "https://github.com/yourusername/prodguardian#readme"

[project.scripts]
prodguardian = "prodguardian.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["prodguardian*"]

[tool.setuptools.package-data]
"prodguardian.production" = ["templates/*.j2"]
"prodguardian.tui" = ["logo.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
collect_ignore_glob = ["tests/fixtures/*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
